# animelib

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-01-anishelf-windows.md
docs/superpowers/specs/: 2026-06-01-anishelf-windows-design.md
src/: App.tsx  api.ts  library.test.ts  library.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  repository.rs  tmdb.rs
