[package]
name = "anishelf-windows"
version = "0.1.0"
description = "AniShelf Windows desktop app"
authors = ["OpenAI Codex on behalf of the user"]
edition = "2021"

[lib]
name = "anishelf_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
