[package]
name = "animelib"
version = "0.1.3"
description = "animelib Windows desktop app"
authors = ["OpenAI Codex on behalf of the user"]
edition = "2021"

[lib]
name = "animelib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
